bk_ida/gccida/c3/want_to_gcse_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1786:29: error: use of undeclared identifier 'machine_mode'
if ( !general_operand( x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1786:44: error: expected expression
if ( !general_operand( x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1792:6: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
v5 = want_to_gcse_p_test_insn; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1793:7: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
if ( !want_to_gcse_p_test_insn ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1795:30: error: invalid suffix 'xmode' on integer constant
v6 = gen_rtx_REG( *(short *)0xmode, 106); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1797:1: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
want_to_gcse_p_test_insn = make_insn_raw( v7); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1798:1: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
want_to_gcse_p_test_insn[1] = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1799:20: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
ggc_add_rtx_root( &want_to_gcse_p_test_insn, 1); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1801:6: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
v5 = want_to_gcse_p_test_insn; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1804:6: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
v8 = want_to_gcse_p_test_insn; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/gcse.c:1805:28: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
*( _QWORD *)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 16LL) = x; 
                           ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/want_to_gcse_p/src/obj/gcse.o] Error 1
